--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
     "stimulus": "^1.1.0",
     "webpack": "^4.23.1",
     "webpack-dev-middleware": "^3.4.0"
+  },
+  "babel": {
+    "plugins": [
+      "@babel/plugin-proposal-class-properties"
+    ]
   }
 }
